Changes to Version 2.0-22

    o added residual curvature tests for glm.nb

    o mcPlot and mcPlot draw 'marginal/conditional' plots for lm objects.  The marginal plot is of the centered response versus a centered regressor; the conditional plot is the corresponding added-variable plot.  The plots can be overlaid or viewed side-by-side.

    o added argument marginal.scale to avPlots to scale the added-variable plot for Y on X|Z using the scale from the marginal plot of Y vs X ignoring X.  The default is FALSE, corresponding to using scaling to maximize resolution or use xlim and ylim to set user scaling.

    o Fixed bugs in Anova.survreg() that could affect types II, II tests, both Wald and LR, and one similar bug in linearHypothesis.survreg().

    o Replaced calls to require() with requireNamespace() where possible (suggestion of Brian Ripley).

    o The following functions now produce warnings rather than errors when there are empty groups: scatterplot(), scatterplotMatrix(), scatter3d(), densityPlot().

    o Corrected name of "Blackmoor" dataset to "Blackmore".

    o Added KosteckiDillon migraines dataset (contributed by Georges Monette).

    o introduced linearHypothesis.rlm() for rlm models (suggestion of Matthieu Stigler).

    o Small bug fixes/improvements.

Changes to Version 2.0-21

    o residualPlot error when using 'type="rstudent" has been fixed.

    o Minor change to "recode" documentation; improved error checking in recode().

    o Fixed a bug in gamLine with non-canonical links. (Thanks to Hani Christoph)

    O Added has.intercept.multinom() to make Anova() work with multinom objects fit to a dichotomous response (after bug report by Kristian Hovde Liland).

    o Replaced vif.lm() with vif.default() to cover wider variety of models (after question by Laura Rigg about gls models).

    o Diagonal panels in scatterplotMatrix() (except for histograms) show groups separately when plotted by groups (suggestion by Erich Neuwirth).
